plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'io.openliberty.tools'
version '0.0.6'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    // lsp4intellij is not published to maven yet
    // See: https://github.com/ballerina-platform/lsp4intellij#1-add-the-lsp4intellij-dependency-in-the-build-file-of-the-project
    maven { url 'https://jitpack.io' }
    // lsp4mp
    maven {url 'https://repo.eclipse.org/content/repositories/lsp4mp/'}
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.apache.maven:maven-artifact:3.6.3'
//    implementation 'com.github.ballerina-platform:lsp4intellij:master-SNAPSHOT'
    implementation 'com.github.ballerina-platform:lsp4intellij:0.94.2'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.3.3'
    updateSinceUntilBuild false
    plugins 'terminal', 'java'
}

patchPluginXml {
    changeNotes """
        <b> 0.0.6 </b>
        <ul>
        <li> Fix release
        </ul>
        <b> 0.0.5 </b>
        <ul>
        <li> Update action wording and documentation
        </ul>
        <b> 0.0.4 </b>
        <ul>
        <li> Removed tech preview wording from "start in container" action
        </ul>
        <b> 0.0.3 </b>
        <ul>
        <li> Updated plugin description
        </ul>
        <b> 0.0.2 </b>
        <ul>
        <li> Added start in container (tech preview) action
        </ul>
        <b> 0.0.1 </b>
        <ul>
        <li> First preview release
        </ul>
        """
    version project.version
}